syntax = "proto3";

package gateway.api.v1.video.videoinfo;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
option go_package = "vw_gateway/api/v1/video/videoinfo";

service VideoInfo {
    rpc GetMpd(ProvideMpdReq) returns (stream ProvideMpdResp) {
        option (google.api.http) = {
            get: "/video/{video_id}/mpd"
        };
    }

    rpc GetSegments(ProvideSegmentsReq) returns (stream ProvideSegmentsResp) {
        option (google.api.http) = {
            get: "/video/{video_id}/segments"
        };
    }

    rpc GetVideoCover(GetVideoCoverReq) returns (stream GetVideoCoverResp) {
        option (google.api.http) = {
            get: "/video/{video_id}/cover"
        };
    }

    rpc GetVideoInfo(GetVideoInfoReq) returns (GetVideoInfoResp) {
        option (google.api.http) = {
            get: "/video/{video_id}/info"
        };
    }

    rpc GetVideoList(GetVideoListReq) returns (GetVideoListResp) {
        option (google.api.http) = {
            get: "/video/list"
        };
    }
}

message ProvideMpdReq {
    string video_id = 1;
}
message ProvideMpdResp {
    bytes mpd_data = 1;
}

message ProvideSegmentsReq {
    string video_id = 1;
    // segment_path is the path of the segment file(.m4s)
    string segment_path = 2;
}
message ProvideSegmentsResp {
    bytes segment_data = 1;
}

message GetVideoCoverReq {
    string video_id = 1;
}
message GetVideoCoverResp {
    bytes cover_data = 1;
}

message VideoMetaInfo {
    int64 video_id                       = 1;
    int64 author_id                      = 2;
    string author_name                   = 3;
    string title                         = 4;
    string path                          = 5;
    string class_name                    = 6;
    string tags                          = 7;
    int64 hot                            = 8;
    google.protobuf.Timestamp created_at = 9;
    message Records {
        uint32 cnt_barrages  = 1;
        uint32 cnt_shares    = 2;
        uint32 cnt_viewed    = 3;
        uint32 cnt_favorites = 4;
    }
    Records records   = 10;
    string durations  = 11;
    string cover_path = 12;
}

message GetVideoInfoReq {
    string video_id = 1;
}
message GetVideoInfoResp {
    string title = 1;
}

message GetVideoListReq {
    repeated string class = 1;  // 视频所属类别
}
message GetVideoListResp {
    repeated VideoMetaInfo req = 1;
}